# odoo-custom

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  .yamllint.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.railway  Makefile  docker-compose.yml  railway-entrypoint.sh  railway.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECRETS.md  required-checks.yml
.github/workflows/: agent-guardrails.yml  agentlab-daily-restore.yml  apply-control-plane-ddl.yml  build-migration-runner.yml  ci.yml  clean-action-masking.yml  deploy-slack-intake.yml  ghcr-publish.yml  hotfix-prod.yml  implementation-intent-confirmed.yml  implementation-iterate.yml  lint-workflows.yml  migration-dry-run-staging.yml  notify-reporter-on-human-commit.yml  outbox-tick.yml  pgbackrest-backup.yml  preview-cleanup.yml  promote-to-prod.yml  protection-drift-audit.yml  restore-drill.yml  rollback-prod-rehearsal.yml  rollback-prod.yml  spec-generator-embed-ingest.yml  spec-generator-iterate.yml  spec-generator-sweep.yml  spec-generator.yml  spec-quality.yml  spec-required.yml
agents/: Dockerfile  README.md  config.example.yml  config.prod.yml  pyproject.toml
agents/agents/: __init__.py  bootstrap.py  cli.py  config.py  smoke.py
agents/agents/adapters/: __init__.py  events_github_webhook.py  events_slack_webhook.py  llm_litellm.py  logger_stdjson.py  notifier_slack.py  repo_github.py  secrets_envvar.py
agents/agents/code/: __init__.py  core.py
agents/agents/hello/: __init__.py  core.py
agents/agents/implementation/: __init__.py  core.py
agents/agents/optimization/: __init__.py  core.py
agents/agents/ports/: __init__.py  artifact_store.py  compute_env.py  event_bus.py  issue_tracker.py  knowledge_base.py  llm_provider.py  logger.py  notifier.py  repo.py  secret_store.py
agents/agents/security/: __init__.py  core.py
agents/agents/services/: slack_intake_http.py
agents/agents/spec_generator/: __init__.py  bug_repro.py  core.py  drafter.py  intake.py  refiner.py
agents/agents/support_triage/: __init__.py  core.py
agents/charters/: README.md  code.md  implementation.md  optimization.md  security.md  spec-generator.md  support-triage.md
agents/tests/: test_config.py
agents/tests/contract/: README.md  test_events_github_webhook.py  test_events_slack_webhook.py  test_logger.py  test_spec_generator_bug_repro.py  test_spec_generator_drafter.py  test_spec_generator_refiner.py
agents/tests/integration/: test_spec_generator_flow.py  test_spec_generator_iterate.py
config/: odoo-railway.conf  odoo.conf
custom-addons/: .build-timestamp
custom-addons/account_aged_payable/: __manifest__.py
custom-addons/account_aged_receivable/: __manifest__.py
custom-addons/account_cash_flow/: __manifest__.py
custom-addons/account_general_ledger/: __manifest__.py
custom-addons/account_ledger_report/: __manifest__.py
custom-addons/account_product_category_accounts/: __manifest__.py
custom-addons/account_profit_loss/: __manifest__.py
custom-addons/club_access_control/: __manifest__.py
custom-addons/club_affiliate_billing/: __manifest__.py
custom-addons/club_affiliate_employees/: __manifest__.py
custom-addons/club_assembly/: __manifest__.py
custom-addons/club_core/: __manifest__.py
custom-addons/club_equestrian/: __manifest__.py
custom-addons/club_events/: __manifest__.py
custom-addons/club_faq/: __manifest__.py
custom-addons/club_golf/: __manifest__.py
custom-addons/club_guests/: __manifest__.py
custom-addons/club_job_offers/: __manifest__.py
custom-addons/club_lost_found/: __manifest__.py
custom-addons/club_news/: __manifest__.py
custom-addons/club_object_loan/: __manifest__.py
custom-addons/club_pos/: __manifest__.py
custom-addons/club_pqr/: __manifest__.py
custom-addons/club_sailing/: __manifest__.py
custom-addons/club_swimming/: __manifest__.py
custom-addons/club_tennis/: __manifest__.py
custom-addons/club_tournaments/: __manifest__.py
custom-addons/co_dashboards/: __manifest__.py
custom-addons/co_warehouse_extended/: __manifest__.py
custom-addons/goliatt_pms/: __manifest__.py
custom-addons/saas_filestore_backup/: __manifest__.py
custom-addons/saas_license_gate/: __manifest__.py  hooks.py
custom-addons/saas_provisioning_gateway/: __manifest__.py
custom-addons/saas_tenant_gate/: __manifest__.py
docs/: 2026-05-15-spec-driven-dev-plan.html  2026-05-15-spec-driven-dev-plan.md  2026-05-16-afk-session-summary.md  2026-05-16-github-issues-roadmap.md  2026-05-16-implementation-agent-infographic.html  2026-05-16-phase4-1-licensing-shipped.md  2026-05-18-github-admin-todos.md  2026-05-18-onboarding-dry-run.md  2026-05-18-session-report.md
docs/adr/: 0001-trunk-based-with-waves.md  0002-cross-platform-parity.md  0003-log-drain-better-stack.md  0004-phase-1-retrospective.md  README.md
docs/runbooks/: spec-generator-rollout.md  writing-addon-tests.md
infra/: odoo-entrypoint.sh
infra/agentlab/: README.md  mask-allowlist.yml  mask-prod-data.sh  mask_prod_data.py  masking-rules.yml  sensitive-topics.yml
infra/backup-runner/: package.json  pnpm-lock.yaml
infra/observability/: README.md  alerts.json
infra/postgres/: Dockerfile  init-pgbackrest.sh  pgbackrest.conf  pgdump-snapshot.sh  pgrestore-snapshot.sh  (+2 more)
jorels-addons/: README.md
(+796 files in other folders)
